<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisenoActivity">

    <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dise_o"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_de_fondo"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp" />

    <SeekBar
            android:id="@+id/seekBarRed"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="43"
            android:layout_marginTop="10dp"
            android:background="@color/red" />

    <SeekBar
            android:id="@+id/seekBarGreen"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="43"
            android:layout_marginTop="10dp"
            android:background="@color/green" />

    <SeekBar
            android:id="@+id/seekBarBlue"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="43"
            android:layout_marginTop="10dp"
            android:background="@color/blue" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tama_o_de_los_botones"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp" />

    <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="211dp"
            android:layout_height="66dp"
            android:value="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

    <Button
            android:id="@+id/confirmBtn"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:text="@string/confirm_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp" />

</LinearLayout>