<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".FotoActivity"
        android:padding="16dp">

    <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elige_una_foto"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

    <ImageView
            android:layout_width="262dp"
            android:layout_height="157dp"
            android:contentDescription="@string/foto"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cookie"
            android:id="@+id/pfpImageView"
            android:layout_marginTop="30dp"
            android:background="@color/light_gray" />

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="302dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:contentDescription="@string/datos_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/light_gray">

        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="2">

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/fnaf"
                    android:id="@+id/imageView1"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/godot"
                    android:id="@+id/imageView2"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/cookie"
                    android:id="@+id/imageView3"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/play"
                    android:id="@+id/imageView4"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/terr"
                    android:id="@+id/imageView5"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/wii"
                    android:id="@+id/imageView6"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/pollo"
                    android:id="@+id/imageView7"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/foto"
                    android:src="@drawable/persona"
                    android:id="@+id/imageView8"
                    android:layout_margin="8dp"
                    android:background="@color/gray" />
        </GridLayout>
    </ScrollView>

    <Button
            android:id="@+id/confirmDataBtn"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:text="@string/confirm_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

</LinearLayout>